# wardtest

./: .gitignore  CLAUDE.md  LICENSE  Makefile.am  README.md  configure.ac
.claude/: roles.md  standards.md
.claude/agents/: review.md
.claude/design/: wardtest.md
deploy/: Dockerfile.client  Dockerfile.server  docker-compose.yml  run-crash-test.sh  run-docker.sh  run-stress.sh  run-test.sh  server.toml
doc/: deployment.md
src/: Makefile.am  Makefile.in  actions.c  chunk.c  codec.c  control.c  crc32.c  history.c  machine.c  meta.c  rng.c  rs.c  state.c  stop.c  wardtest.c  wardtest.h  xor.c
tests/: Makefile.am  test_actions.c  test_chunk.c  test_codec.c  test_control.c  test_crc32.c  test_main.c  test_meta.c  test_rng.c  test_rs.c  test_xor.c
